--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@aws-cdk/assert": "1.106.1",
     "@types/aws-lambda": "^8.10.76",
+    "@types/dateformat": "^3.0.1",
     "@types/jest": "^26.0.10",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^10.17.27",
@@ -32,6 +33,7 @@
     "@aws-cdk/core": "^1.106.1",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.918.0",
+    "dateformat": "^4.5.1",
     "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.16",
     "uuid": "^8.3.2"
