--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/auth0-js": "^9.14.4",
     "@types/axios": "^0.14.0",
+    "@types/dateformat": "^3.0.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
@@ -22,6 +23,7 @@
     "@auth0/auth0-react": "^1.5.0",
     "auth0-js": "^9.16.2",
     "axios": "^0.21.1",
+    "dateformat": "^4.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
