--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "aws-sdk": "^2.918.0",
     "dateformat": "^4.5.1",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.3",
     "source-map-support": "^0.5.16",
     "uuid": "^8.3.2"
   }
