--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.106.1",
@@ -34,9 +34,9 @@
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.918.0",
     "dateformat": "^4.5.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^2.0.3",
     "source-map-support": "^0.5.16",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   }
 }
