--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.106.1",
+    "@aws-cdk/assert": "^1.198.0",
     "@types/aws-lambda": "^8.10.76",
     "@types/dateformat": "^3.0.1",
     "@types/jest": "^26.0.10",
