--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,12 @@
     "auth0-js": "^9.16.2",
     "axios": "^0.21.1",
     "dateformat": "^4.5.1",
+    "nth-check": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
